Fix spacing and add fade to each project

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  margin-bottom: 10rem;
 }
 
 .hero-content > p {
@@ -297,8 +298,13 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 1rem;
+  align-items: flex-start;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.projects-container > * {
+  margin: auto;
 }
 
 .projects-title-container {
@@ -310,14 +316,14 @@ img {
   font-size: 48px;
   font-weight: 500;
   line-height: 57px;
-  margin: 0 3rem;
 }
 
 .single-project-container {
+  display: block;
   max-width: 1155px;
   max-height: 534px;
   position: relative;
-  margin: 1rem 3rem;
+  margin: 1.5rem 0;
 }
 
 .project-info {
@@ -327,13 +333,14 @@ img {
   gap: 0.5rem;
   padding: 1rem;
   border-radius: 5px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   opacity: 1;
-  background: rgb(28,30,34);
   background: linear-gradient(0deg, rgba(28,30,34,1) 0%, rgba(255,174,0,0) 100%);
   transition: opacity 0.3s;
 }
